[tool.poetry]
name = "inflammation"
version = "1.0.0"
description = "Analyse patient inflammation data"
authors = ["Laura Riedel <laura.riedel@uni-potsdam.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "3.7.5"
numpy = "1.24.4"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
